--- a/main.css
+++ b/main.css
@@ -45,4 +45,15 @@ button:hover {
     background-color: #27ae60;
     padding: 16px;
     color:#fff;
+    display: none;
+}
+
+.error-message {
+    font-size: 12px;
+    padding: 8px;
+    background-color: red;
+    color:#fff;
+    margin-bottom: 8px;
+    display: none;
+
 }
