--- a/main.css
+++ b/main.css
@@ -5,9 +5,6 @@
     font-family: sans-serif;
 }
 
-body {
-}
-
 .container {
     margin: 80px auto;
     max-width: 640px;
@@ -56,4 +53,10 @@ button:hover {
     margin-bottom: 8px;
     display: none;
 
+}
+
+input.error {
+    color: red;
+    border-color: red;
+    outline-color: red;
 }
